namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-app
  labels:
    project: k8s-security-hardening
